engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/detail.less
.product--details {

	.product--navigation,
	.product--actions {
		display: none
	}

	.product--header {
		.clearfix();
		.unitize-padding(10, 0, 20, 0, 16);

        // Product title
        .product--title {
            .unitize-padding(10, 0);
            .unitize(21, 16, font-size);
            margin: 0;
            font-weight: bold;
            color: @text-color-dark;
            border-bottom: 1px solid @border-color;
        }
	}

    .product--supplier,
    .product--rating-container {
        .unitize-height(35);
        .unitize-margin(5, 0, 0, 0);
        width: 50%;
    }

    // Supplier logo in the header
	.product--supplier {
		text-align: right;
        float: right;

		.product--supplier-link {
            .unitize-height(35);
            display: inline-block;
        }
	}

    // Customer reviews
    .product--rating-container {
        float: left;

        .product--rating-link {
            .unitize(14, 16, font-size);
            vertical-align: middle;
            color: @text-color;
        }

        // Star icon styling
        [class^="icon"] {
            .unitize(16, 16, font-size);
        }
    }

	// Product Image
	.product--image-container {
        .unitize-margin(0, 0, 20, 0);
        width: 100%;
	}

    .alert {
        .unitize-margin(0, 0, 20, 0);
    }

	.product--tax {
		.unitize(12, 16, font-size);
		margin: 0;

		a { text-decoration: none }
	}

    .product--buybox {
        .price--default {
            .clearfix();
            .unitize-margin(0, 0, 10, 0);
        }

        .content--default {
            .unitize(28, 16, font-size);
            font-weight: bold;
            color: @text-color-dark;

            &.is--discount {
                color: @badge-discount-bg;
            }
        }

        .content--discount {
            .unitize-margin(0, 0, 5, 0);
            display: block;
            font-weight: bold;

            span {
                font-weight: normal;
            }
        }

        .price--unit {
            .unitize-margin(0, 0, 5, 0);
        }

        .price--label {
            font-weight: bold;
        }

        .price--line-through {
            text-decoration: line-through;
        }

        .price--discount-percentage {
            color: @highlight-success;
        }

        .price--discount-icon {
            .unitize-width(25);
            .unitize-height(25);
            .unitize-margin(0, 10, 0, 0);
            .unitize(23, 16, line-height);
            .unitize(16, 16, font-size);
            .unitize(8, 16, top);
            .border-radius(3px);
            display: inline-block;
            position: relative;
            background: @badge-discount-bg;
            color: @badge-discount-color;
            text-align: center;
            font-weight: bold;
            float: left;
        }
    }

    .buybox--form {
        .unitize-padding(20, 0, 0, 0);
        border-top: 1px solid @border-color;
    }

    // Quanitity box and input
	.buybox--quantity {
		margin: 0 2% 0 0;
		width: 35%;

        .js--fancy-select {
			.unitize-height(44);
			.border-radius(3px);
            font-weight: bold;
            width: 100%;

            .js--fancy-select-text,
            .js--fancy-select-trigger {
                .unitize-height(44);
                .unitize(44, 16, line-height);
            }
		}
	}

	// "Buy now" button
	.buybox--button {
        .unitize-padding(11, 10, 11, 10, 16);
        .unitize(16, 16, font-size);
        width: 63%;
    }

	// Product base information
	.product--base-info {
		.unitize-margin(12, 0, 32, 0);

		.entry--label {
			.unitize-margin(0, 8, 0, 0);
			display: inline-block;
		}
	}

	// Product information tabs
	.additional-info--tabs {
		.unitize-margin(0, 0, 32, 0, 16);
	}

    .content--description,
    .content--product-reviews,
    .content--related-products,
    .content--similar-products {
        .unitize-padding(10, 10);
    }

    .product--properties {
        .unitize-padding(0, 0, 10, 0);

        .product--properties-table {
            width: 100%;
        }

        td {
            .unitize-padding(10, 10, 0, 10);
            width: 50%;
        }
    }

	// Content headlines
	.content--title {
		.unitize(18, 16, font-size);
		color: @text-color-dark;
	}

    .content--link [class^=icon] {
        .unitize(10, 16, font-size);
        .unitize-margin(-2, 8, 0, 0);
    }

	// Block prices
	.block-prices--container {
		.unitize-margin(0, 0, 12, 0);
        display: block;
		border: 1px solid @border-color;
		padding: 1px;

        .block-prices--table {
            width: 100%;

            td {
                .unitize-padding(4, 10);
            }

            th {
                .unitize-padding(4, 10);
                color: #fff;
                background: @gray;
                text-align: left;
            }
        }
	}

	.listing .product--box .panel--body {
		border-left: 1px solid @border-color;
		border-right: 1px solid @border-color;
	}
}

// Product reviews form
.review--form {
	.review--field {
		.unitize-margin(0, 0, 10, 0);
		width: 100%;
	}

    .captcha--placeholder {
        .unitize-margin(20, 0);
    }

	.review--notice {
		.unitize(12, 16, font-size);
	}
}

// Product description
.product--description {
	ol, ul {
		.unitize-margin(0, 16, 16);
		padding: 0;

		& li {
			.unitize-margin(0, 0, 0, 6);
		}
	}
}
/* ... */

